app/assets/stylesheets/components/_blogpost.scss
// New Blog Post Cards
.blog-card-wrapper {
  background-color: white;
  border-radius: 8px;
  padding: 24px;
  position: relative;
  transition: all .2s ease-in-out;
  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.04);
  &:hover {
  transform: scale(1.01);
  box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.02);
  }
 .input-rounded {
  margin-left: 12px;
  display: block;
  color: $secondary-gray;
 }
}

@media(max-width: 576px) {
  .blog-card-wrapper {
    padding: 18px;
  }
  .blog-card-wrapper .avatar-image {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border: 2px solid $chreative-medium-orange;
    padding: 1px;
  }
  .blog-card-wrapper .avatar-large {
    width: 40px;
    height: 40px;
  }
  .blog-card-wrapper .absolute-gradient {
    width: 8px;
  }
}

.blog-card {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  position: relative;
}

.blog-byline-content {
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #E5E5E5;
  font-size: 14px;
  align-items: center;
  justify-content: flex-start;
  img {
    margin-right: 8px;
  }
  p {
    margin: 0;
    color: $secondary-gray;
  }
  i {
    color: $chreative-orange;
    margin-right: 4px;
  }
}

.card-links-content {
  display: flex;
  padding-top: 8px;
  border-top: 1px solid #E5E5E5;
  font-size: 16px;
  align-items: center;
  justify-content: flex-start;
  color: $secondary-gray;
  p {
    margin: 0;
  }
  i {
    margin-right: 4px;
    color: $chreative-orange;
  }
  > * {
    margin-left: 1px;
    margin-right: 16px;
  }
  .card-tag {
    margin-left: auto;
  }
}

.blog-text-content {
  margin: 40px 0;
  h3 {
    color: $primary-dark;
    font-size: 20px;
  }
  p {
    // To display line breaks
    white-space: pre-line;
  }
}

.gif-image-content {
  float: right;
}

.landscape {
  width: 275px;
  height: 200px;
  object-fit: cover;
}

.portrait {
  width: 200px;
  margin-left: 30px;
}

.video {
  width: 300px;
  margin-left: 30px;
}

